Use Android-compatible file APIs in tests